# web-server-demo

./: .dockerignore  .env  Cargo.toml  README.md  build.rs  docker-compose.yaml  docker-compose.yml  dockerfile  setup.toml
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
migrations/: 20260220083026_questions_table.down.sql  20260220083026_questions_table.up.sql  20260220083419_answers_table.down.sql  20260220083419_answers_table.up.sql  20260303231132_accounts.down.sql  20260303231132_accounts.up.sql  20260315084641_extend_questions_table.down.sql  20260315084641_extend_questions_table.up.sql  20260315084650_extend_answers_table.down.sql  20260315084650_extend_answers_table.up.sql
src/: lib.rs  main.rs  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  mod.rs  question.rs
src/types/: account.rs  answer.rs  config.rs  mod.rs  pagination.rs  question.rs
