[package]
name = "rust-web-dev"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.2", features = ["full"] }
warp = "0.3"
handle-errors = {path = "handle-errors"}
uuid = { version = "0.8", features = ["v4"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1", features = ["log"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1.1"
rand = "0.8"
rust-argon2 = "1.0"
rusty_paseto = "0.9"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.13.1", features = ["toml"] }
clap = { version = "4", features = ["derive"] }
dotenv = "0.15.0"
